--- a/src/_assets/scss/_code.scss
+++ b/src/_assets/scss/_code.scss
@@ -16,7 +16,6 @@
     position: relative;
 
     overflow-x: auto;
-    scrollbar-width: thin;
 
     margin-left: -1rem;
     margin-right: -1rem;
@@ -24,20 +23,6 @@
     background-color: var(--bg-code);
     // border: 1px solid rgba(black, 0.1);
     z-index: 0;
-
-    &.has-overflow {
-        &:hover, &:active, &:focus-within {
-            overflow-x: scroll;
-            @media screen and (min-width: 1200px) {
-                --width: calc(var(--scrollWidth) + 1rem);
-                width: var(--width, var(--maxWidth));
-                max-width: calc(100vw - 2 * var(--p-sides-x) - 1rem);
-                --scrollbar-track: transparent;
-                --scrollbar-thumb: transparent;
-            }
-        }
-    }
-
 
     &:before {
         content: attr(data-lang);
@@ -59,17 +44,7 @@
         opacity: 0.5;
     }
 
-    &::-webkit-scrollbar {
-        height: var(--scrollbar-size);
-    }
-
-    &::-webkit-scrollbar-track {
-        background: var(--scrollbar-track);
-    }
-
-    &::-webkit-scrollbar-thumb {
-        background-color: var(--scrollbar-thumb);
-    }
+    @extend .overflow;
 }
 
 .line--highlighted {
